# witti

./: LICENSE.txt  README.txt
Documentation/: InitialProjectDescription.docx
Documentation/design_document/: design-document.lyx  design_document.lyx~
alpha/: README.txt
alpha/wittiApp/res/layout/: activity_home.xml  activity_settings.xml  preferences.xml
alpha/wittiApp/res/raw/: yxz_points_less.txt
alpha/wittiApp/res/values/: strings.xml
meeting_notes/: 2-17_Design_Doc_planning.txt
prior/ojVelodyneDriver/: CMakeLists.txt  README.TXT
prior/ojVelodyneDriver/include/: velodyneDataDriver.h  velodyneDataReader.h  velodyneHardwareReader.h  velodyneReader.h
prior/ojVelodyneDriver/src/: main.cpp  velodyneDataDriver.cpp  velodyneDataReader.cpp  velodyneHardwareReader.cpp
prior/serial/: spanTalker.cpp
prior/summerSprinkle/: CMakeLists.txt  README.txt  createIndex.m  dataviewer.m  indexTables.mat  pcap2bin.cpp  plotxdata.m  scatteredPoints.m
prior/velodyneConversion/: CMakeLists.txt  README.TXT  dataviewer.m  plotxdataRT.m  savedump.c  scatteredPoints.m  scatteredPointsSingleCall.m
sandbox/: README.txt
sandbox/AcceleTracer/: .project  AcceleTracer.sublime-workspace  AndroidManifest.xml
sandbox/AcceleTracer/res/layout/: activity_display.xml  activity_launch.xml
sandbox/pathFinder/: .project  AndroidManifest.xml
sandbox/wittiApp/: .project  AndroidManifest.xml
src/: INSTALL.txt  README.txt
src/server/: README.txt  dir.php  index.php  live.php
src/wittiApp/: .gitignore  AndroidManifest.xml  import-summary.txt
src/wittiApp/app/: build.gradle
src/wittiAppTest/: .classpath  AndroidManifest.xml
src/wittieAppTest/: .classpath  .project  AndroidManifest.xml
(+108 files in other folders)
